test/expected/declare_o_arrow_i.out
declare -> as operator returning int
                                 ^
34: error: invalid operator -> return type "int"; must be a pointer to struct, union, or class
